[package]
name = "bigtcp_user"
version = "0.1.0"
edition = "2021"

[dependencies]
smoltcp = { git = "https://github.com/asterinas/smoltcp", tag = "r_2024-11-08_f07e5b5", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "socket-udp",
    "socket-tcp",
] }
aster-bigtcp = { path = "../aster-bigtcp", default-features = false, features = ["user"] }